2002-09-06  John Levon  <levon@movementarian.org>

	* ControlMath.C: terminate dots
 
2002-09-05  Angus Leeming  <leeming@lyx.org>

	* all files: modify the headers as discussed on the list.

2002-08-30  John Levon  <levon@movementarian.org>

	* ControlMath.h: 
	* ControlMath.C: moved from MathsSymbols.C
 
2002-08-27  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* ControlFloat.C (applyParamsToInset): wide() now has two arguments

2002-08-23  Rob Lahaye  <lahaye@snu.ac.kr>

	* ControlGraphics.C: make rotationOrigin's default ("leftBaseline") the
	first item in the list

2002-08-15  Angus Leeming  <leeming@lyx.org>

	* ControlConnections.C: Dialogs::redrawGUI is now a method not a signal.

	* ControlParagraph.C: no longer bind to Dailogs::updateParagraph.

2002-08-15  Angus Leeming  <leeming@lyx.org>

	* lots: changed my email address to leeming@lyx.org.

	* GUI.h: return it to private derivation from boost::noncopyable.

2002-08-14  Angus Leeming  <leeming@lyx.org>

	* GUI.h: public derivation from boost::noncopyable.

2002-08-14  Angus Leeming  <leeming@lyx.org>

	* GUI.h: class GUI deries from boost::noncopyable

	* ControlButtons.h: no longer derives from DialogBase, but instead
	derives directly from boost::noncopyable.

	* ViewBase.h: derives from boost::noncopyable.

	* ControlCharacter.C:
	* ControlCommand.C:
	* ControlConnections.C:
	* ControlGraphics.C:
	* ControlInclude.C:
	* ControlParagraph.C:
	* ControlPreamble.C:
	* ControlPrint.C:
	* ControlSearch.C:
	* ControlSpellchecker.C:
	* ControlTexinfo.C:
	* ControlThesaurus.C:
	rearrange #includes. Remove unnecessary ones.

	* ControlError.h: add "insets/inseterror.h".

	* helper_funcs.h: add necessary #includes.

	* tex_helpers.[Ch]: add #pragma directives for g++.

	* Makefile.am: remove src/frontends from -I list to compiler.

2002-08-13  Angus Leeming  <leeming@lyx.org>

	* ControlConnections.C:
	* ControlTexinfo.C:
	changes due to the changed LyXView interface that now returns references