@@ -1,3 +1,8 @@
+2002-09-09  John Levon  <levon@movementarian.org>
+
+	* ControlMath.h:
+	* ControlMath.C: add latex_deco
+ 
 2002-09-06  John Levon  <levon@movementarian.org>
 
 	* ControlMath.C: terminate dots
